# G-Krupaa

./: README.md  baray.heic
Music Genre Classification/: README.md  modelsTesting.py  pyproject.toml  requirements.txt
Music Genre Classification/backend/: app.py
Music Genre Classification/backend/llm/: llm_query.py  song_db.py
Music Genre Classification/code/: dataCleaning.py  requirements.txt
Music Genre Classification/code/backend/: verify_db.py
Music Genre Classification/code/backend/llm/: fine_tuning.jsonl
Music Genre Classification/code/frontEnd/: index.html
Music Genre Classification/code/nextjsfrontend/: package-lock.json  package.json
Music Genre Classification/code/nextjsfrontend/app/: page.tsx
Music Genre Classification/code/notebooks/: initial_visualizations.ipynb  stacked_model_exploration.ipynb  xgboost_model_analysis.ipynb
Music Genre Classification/code/utils/: data_preprocessing.py
Music Genre Classification/data/: dataset2cleaned.csv
Music Genre Classification/frontEnd/: README.md
Music Genre Classification/frontEnd/assets/js/: app.js
Music Genre Classification/nextjsfrontend/: next.config.js
Music Genre Classification/nextjsfrontend/app/: layout.tsx
Music Genre Classification/nextjsfrontend/components/layout/: Header.tsx
Music Genre Classification/nextjsfrontend/components/recommender/: HeroSection.tsx  SearchForm.tsx  SongList.tsx
Music Genre Classification/notebooks/: rf_model_exploration.ipynb
Music Genre Classification/utils/: data_visualizations.py
Police dispatch Analysis/: README.md
(+3 files in other folders)
